serving static pages as public

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta description="" content="">
-        <title>Beginning Twitter Related Backbone Application</title>
+        <meta name="description" content="">
+        <title>Beginning Backbone Twitter Related Application</title>
         <link rel="stylesheet" href="css/metro.min.css">
         <link rel="stylesheet" href="css/metro-icons.min.css">
         <link rel="stylesheet" href="css/metro-responsive.min.css">
